Add head.tsx and update next-auth version

--- a/biome.json
+++ b/biome.json
@@ -52,6 +52,7 @@
 				"not-found.tsx",
 				"page.tsx",
 				"route.ts",
+				"head.tsx",
 				"template.tsx",
 				".storybook",
 				"*.stories.*",
