--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "APP_ENV=local next dev",
     "prod-dev": "APP_ENV=prod next dev",
     "build": "prisma generate && next build",
-    "start": "next start",
+    "start": "next build && next start",
     "lint": "biome lint .",
     "format": "biome format .",
     "check": "biome check --apply-unsafe .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "playwright test"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
@@ -23,7 +24,7 @@
     "date-fns": "^3.3.1",
     "microcms-js-sdk": "^2.7.0",
     "next": "14.1.1-canary.15",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
