--- a/package.json
+++ b/package.json
@@ -1,56 +1,60 @@
 {
-  "name": "wdc-seminar-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "APP_ENV=local next dev",
-    "prod-dev": "APP_ENV=prod next dev",
-    "build": "prisma generate && next build",
-    "start": "next build && next start",
-    "lint": "biome lint .",
-    "format": "biome format .",
-    "check": "biome check --apply-unsafe .",
-    "prepare": "husky install",
-    "test": "playwright test"
-  },
-  "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@next-devtools/core": "^0.1.2",
-    "@next/third-parties": "^14.0.4",
-    "@prisma/client": "^5.8.1",
-    "@tabler/icons-react": "^2.45.0",
-    "@vercel/postgres": "^0.7.2",
-    "date-fns": "^3.3.1",
-    "microcms-js-sdk": "^2.7.0",
-    "next": "14.1.1-canary.15",
-    "next-auth": "^4.24.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "react-spinners": "^0.13.8",
-    "stripe": "^14.14.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.5.3-nightly.24fcf19",
-    "@playwright/test": "^1.41.2",
-    "@tailwindcss/aspect-ratio": "latest",
-    "@tailwindcss/forms": "latest",
-    "@tailwindcss/line-clamp": "latest",
-    "@tailwindcss/typography": "latest",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "latest",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "postcss": "latest",
-    "prisma": "^5.8.1",
-    "tailwind-variants": "^0.1.20",
-    "tailwindcss": "latest",
-    "tw-colors": "^3.3.1",
-    "typescript": "^5.3.3"
-  }
+	"name": "wdc-seminar-site",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "APP_ENV=local next dev",
+		"prod-dev": "APP_ENV=prod next dev",
+		"build": "prisma generate && next build",
+		"start": "next build && next start",
+		"lint": "biome lint .",
+		"format": "biome format .",
+		"check": "biome check --apply-unsafe .",
+		"prepare": "husky install",
+		"test": "playwright test"
+	},
+	"prisma": {
+		"seed": "ts-node prisma/seed.ts"
+	},
+	"dependencies": {
+		"@heroicons/react": "^2.1.1",
+		"@next-auth/prisma-adapter": "^1.0.7",
+		"@next-devtools/core": "^0.1.2",
+		"@next/third-parties": "^14.0.4",
+		"@prisma/client": "^5.8.1",
+		"@tabler/icons-react": "^2.45.0",
+		"@vercel/postgres": "^0.7.2",
+		"date-fns": "^3.3.1",
+		"microcms-js-sdk": "^2.7.0",
+		"next": "14.1.1-canary.15",
+		"next-auth": "^4.24.6",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^4.12.0",
+		"react-spinners": "^0.13.8",
+		"stripe": "^14.14.0",
+		"ts-node": "^10.9.2",
+		"zod": "^3.22.4",
+		"zustand": "^4.5.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.5.3-nightly.24fcf19",
+		"@playwright/test": "^1.41.2",
+		"@tailwindcss/aspect-ratio": "latest",
+		"@tailwindcss/forms": "latest",
+		"@tailwindcss/line-clamp": "latest",
+		"@tailwindcss/typography": "latest",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "latest",
+		"husky": "^8.0.3",
+		"lint-staged": "^15.2.0",
+		"postcss": "latest",
+		"prisma": "^5.8.1",
+		"tailwind-variants": "^0.1.20",
+		"tailwindcss": "latest",
+		"tw-colors": "^3.3.1",
+		"typescript": "^5.3.3"
+	}
 }
